# Render_Exercise

./: .gitignore  CMakeLists.txt  README.md  main.cpp
application/: CMakeLists.txt  application.cpp  application.h
global/: base.h
